<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_ecomenda"
    style="@style/defaultLayout"
    android:orientation="vertical">

    <TextView
        style="@style/tituloTexto"
        android:text="@string/titulo_enc" />

    <ImageView
        android:id="@+id/foto_capa_encomenda"
        style="@style/viewImagens"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textview_custo"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/input_custo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <Button
            style="@style/botaoUndo"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:id="@+id/botao_undo_encomenda2"/>

        <Button
            android:id="@+id/confirmar_encomenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finalizar"/>

        <TextView
            style="@style/numeroPassos"
            android:text="@string/passo_3_3"/>

    </LinearLayout>

</LinearLayout>