<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_editar__foto"
    style="@style/defaultLayout"
    android:orientation="vertical">

    <ImageView
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:id="@+id/image_view_editar_fotografia"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/input_data"
            android:textSize="20sp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_data"
            android:ems="10"
            android:id="@+id/text_view_data"
            android:enabled="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="Local:"
            android:textSize="20sp"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_local"
            android:ems="10"
            android:id="@+id/text_view_local"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_descr"
            android:ems="10"
            android:id="@+id/text_view_descricao"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:orientation="horizontal">

        <Button
            style="@style/botaoUndo"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:id="@+id/botao_undo_editar"/>

        <Button
            android:text="@string/finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/botao_concluir" />

    </LinearLayout>


</LinearLayout>
