<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_criar_album"
        style="@style/defaultLayout"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="15dp">

            <AutoCompleteTextView
                android:id="@+id/titulo_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/nome_album"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/botao_alterar_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:minHeight="30dp"
            android:minWidth="30dp"
            android:background="@drawable/ic_editar"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/layout_imagem"
            android:layout_width="320dp"
            android:layout_height="240dp"
            android:background="@drawable/border"
            android:layout_gravity="center">

            <Button
                android:id="@+id/botao_adicionar_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:minWidth="60dp"
                android:background="@drawable/ic_adicionar"
                android:layout_centerInParent="true"/>


            <ImageView
                android:id="@+id/img_capa_album"
                style="@style/viewImagens"/>

        </RelativeLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descr"
            android:layout_gravity="center"
            android:ems="8"
            android:id="@+id/descricao_album" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/botao_back1"
                style="@style/botaoUndo"
                android:layout_centerVertical="true" />

            <Button
                android:layout_marginTop="20dp"
                android:text="@string/prox_passo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botao_prox_passo1"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/passo_1_2"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>